Basic Preact HelloWorld

--- a/lib/thexstack_web/components/layouts/root.html.heex
+++ b/lib/thexstack_web/components/layouts/root.html.heex
@@ -28,12 +28,12 @@
           setTheme(localStorage.getItem("phx:theme") || "system");
         }
         window.addEventListener("storage", (e) => e.key === "phx:theme" && setTheme(e.newValue || "system"));
-        
+
         window.addEventListener("phx:set-theme", (e) => setTheme(e.target.dataset.phxTheme));
       })();
     </script>
   </head>
   <body>
-    {@inner_content}
+    <div id="preact-app"></div>
   </body>
 </html>
