Add catalyst and a few smaller tweaks

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2,3 +2,8 @@
 @source "../css";
 @source "../js";
 @source "../../lib/thexstack_web";
+
+@theme {
+  --font-sans: Inter, sans-serif;
+  --font-sans--font-feature-settings: 'cv11';
+}
