--- a/lib/thexstack_web/components/layouts/root.html.heex
+++ b/lib/thexstack_web/components/layouts/root.html.heex
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html
+  lang="en"
+  class="text-zinc-950 antialiased lg:bg-zinc-100 dark:bg-zinc-900 dark:text-white dark:lg:bg-zinc-950"
+>
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -7,6 +10,7 @@
     <.live_title default="Thexstack" suffix=" · Phoenix Framework">
       {assigns[:page_title]}
     </.live_title>
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
     <PhoenixVite.Components.assets
       names={["js/app.js", "css/app.css"]}
       manifest={{:thexstack, "priv/static/.vite/manifest.json"}}
