--- a/lib/photowalk_web/components/layouts/root.html.heex
+++ b/lib/photowalk_web/components/layouts/root.html.heex
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html
   lang="en"
-  class="text-zinc-950 antialiased lg:bg-zinc-100 dark:bg-zinc-900 dark:text-white dark:lg:bg-zinc-950"
+  class="antialiased "
 >
   <head>
     <meta charset="utf-8" />
@@ -31,7 +31,7 @@
       to_url={fn p -> static_url(@conn, p) end}
     />
   </head>
-  <body>
+  <body class="bg-slate-100 text-slate-900">
     <div id="react-app"></div>
   </body>
 </html>
